@@ -1,29 +1,11 @@
-# $NetBSD: Makefile,v 1.22 2004/10/03 00:13:05 tv Exp $
+# $NetBSD: Makefile,v 1.23 2004/10/22 18:30:43 jmmv Exp $
 
-DISTNAME=	aumix-2.8
-PKGREVISION=	5
-CATEGORIES=	audio
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=aumix/} \
-		http://jpj.net/~trevor/aumix/ \
-		${MASTER_SITE_SUNSITE:=apps/sound/mixers/} \
-		ftp://aumix.sourceforge.net/pub/aumix/stable/ \
-		http://jpj.net/~trevor/aumix/old/
-EXTRACT_SUFX=	.tar.bz2
+.include "Makefile.common"
 
-MAINTAINER=	trevor@jpj.net
-HOMEPAGE=	http://jpj.net/~trevor/aumix.html
-COMMENT=	Set mix levels
+PKGREVISION=	6
 
-BUILD_USES_MSGFMT=	yes
+COMMENT+=	(ncurses interface only)
 
-USE_BUILDLINK3=		yes
-USE_PKGLOCALEDIR=	yes
-GNU_CONFIGURE=		yes
-CONFIGURE_ARGS+=	--enable-own-labels
-CONFIGURE_ARGS+=	--enable-nls
-CONFIGURE_ARGS+=	--without-gtk1
+CONFLICTS=	aumix-gtk-[0-9]*
 
-.include "../../devel/gettext-lib/buildlink3.mk"
-.include "../../devel/ncurses/buildlink3.mk"
-.include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
