@@ -1,0 +1,32 @@
+# $NetBSD: Makefile.common,v 1.1 2004/10/22 18:30:43 jmmv Exp $
+
+DISTNAME=	aumix-2.8
+CATEGORIES=	audio
+MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=aumix/} \
+		http://jpj.net/~trevor/aumix/ \
+		${MASTER_SITE_SUNSITE:=apps/sound/mixers/} \
+		ftp://aumix.sourceforge.net/pub/aumix/stable/ \
+		http://jpj.net/~trevor/aumix/old/
+EXTRACT_SUFX=	.tar.bz2
+
+MAINTAINER=	trevor@jpj.net
+HOMEPAGE=	http://jpj.net/~trevor/aumix.html
+COMMENT=	Set mix levels
+
+BUILD_USES_MSGFMT=	yes
+
+DISTINFO_FILE=		${.CURDIR}/../../audio/aumix/distinfo
+PATCHDIR=		${.CURDIR}/../../audio/aumix/patches
+PLIST_SRC=		${.CURDIR}/../../audio/aumix/PLIST
+
+USE_BUILDLINK3=		yes
+USE_PKGLOCALEDIR=	yes
+GNU_CONFIGURE=		yes
+
+CONFIGURE_ARGS+=	--enable-own-labels
+CONFIGURE_ARGS+=	--enable-nls
+CONFIGURE_ARGS+=	--without-gtk1
+CONFIGURE_ARGS+=	--without-gtk
+
+.include "../../devel/gettext-lib/buildlink3.mk"
+.include "../../devel/ncurses/buildlink3.mk"
